<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_weather">

<fragment
    android:id="@+id/nav_fav"
    android:name="com.example.aStar4cast.ui.favorites.FavoritesFragment"
    android:label="@string/title_favorites"
    tools:layout="@layout/fragment_favorites" />

<fragment
    android:id="@+id/nav_weather"
    android:name="com.example.aStar4cast.ui.weather.WeatherFragment"
    android:label="@string/title_weather"
    tools:layout="@layout/fragment_weather" />

<fragment
    android:id="@+id/nav_info"
    android:name="com.example.aStar4cast.ui.info.InfoFragment"
    android:label="@string/title_info"
    tools:layout="@layout/fragment_info" />
</navigation>