<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnShowList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0CFFFFFF"
        android:padding="15dp"
        android:text="@string/favorite_list_btn"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/btn_empty_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9FFF7A19"
        android:padding="5dp"
        android:text="@string/empty_list_btn"
        android:textColor="#CBFFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ToggleButton
        android:id="@+id/btn_edit_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#52E1A579"
        android:padding="5dp"
        android:textColor="#CBFFFFFF"
        android:textOff="@string/text_off_toggle"
        android:textOn="@string/text_on_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ListView
        android:id="@+id/lvCitiesList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#40FFFFFF"
        android:textColor="#CBFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/tvDeleteInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_row_info"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/lvCitiesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>